--- a/index.css
+++ b/index.css
@@ -2,5 +2,7 @@ h1 {
     font-family: Georgia, 'Times New Roman', Times, serif ;
     text-align: center;
     color: antiquewhite;
+}
+body{
     background-color: darkgreen;
 }
