--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@ h1 {
     text-align: center;
     color: antiquewhite;
 }
+h3{
+    font-family: Georgia, 'Times New Roman', Times, serif ;
+     text-align: left; 
+     color: antiquewhite;
+}
 body{
     background-color: darkgreen;
 }
