--- a/index.css
+++ b/index.css
@@ -2,14 +2,11 @@ h1 {
     font-family: Georgia, 'Times New Roman', Times, serif ;
     text-align: center;
     color: antiquewhite;
-    background-color: darkgreen;
+    background: darkgreen;
 }
 h3{
     font-family: Georgia, 'Times New Roman', Times, serif ;
      color: antiquewhite;
-}
-body{
-    
 }
 .start-page{
     align-content: center;
