--- a/index.css
+++ b/index.css
@@ -18,4 +18,7 @@ h3{
 }
 body{
     background-image: url('pitch.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
