--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ h3{
 .start-page-img{
     width: 300px;
     margin: 10px;
-    display: flex;
+    float:right;
 }
 body{
     background-image: url('pitch.jpg');
