--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ h3{
     width: 300px;
     float: left;
 }
-.start-page-img{
+.start-page img{
     width: 300px;
     margin: 10px;
     float:right;
