--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ h3{
     margin: 10px;
 }
 body{
-    background-image: url(pitchh.jpg);
+    background-image: url(pitch.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
