--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body{
     font-family: Arial, sans-serif;
 }
 h1 {
-    background: linear-gradient();
+    background: linear-gradient(to right, rgb(82, 82, 255), #0072ff );
     color: white;
     padding: 20px;
     text-align: center;
@@ -63,13 +63,9 @@ padding: 15px;
 background-color: antiquewhite;
 border-radius: 8px;
 overflow-y: auto;
-box-shadow: 0 2px 5px;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 img {
     max-width: 100%;
     height: auto;
-    width: 400px;
-    display: block;
-    margin: 20px auto;
-    border-radius: 10px;
 }
