--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@ body{
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: green;
+    background-image: url(football-field.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: Arial, sans-serif;
 }
 h1 {
