--- a/index.css
+++ b/index.css
@@ -28,9 +28,15 @@ h2 a {
     text-decoration: none;
     color: #333;
     transition: color 0.3s ease;
+    font-size: 0.8rem; 
+    padding: 8px 16px; 
+    border-radius: 5px; 
+    background-color: #333; 
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 h2 a:hover{
     color: #0af93e;
+    background-color: #555;
 }
 h3 {
     font-size: smaller;
