--- a/index.css
+++ b/index.css
@@ -44,8 +44,9 @@ h3 {
     margin-top: 30px;
     margin-bottom: 20px;
     padding: 0 20px;
-    color: #333;
+    color: antiquewhite;
     font-family: Arial, sans-serif;
+    background-color: black;
 }
 .start-page{
     display: flex;
