--- a/index.css
+++ b/index.css
@@ -26,12 +26,13 @@ h2 {
 }
 h2 a {
     text-decoration: none;
-    color: #333;
+    color: antiquewhite;
     transition: color 0.3s ease;
     font-size: 0.8rem; 
     padding: 8px 16px; 
     border-radius: 5px; 
     background-color: #333; 
+    display: inline-block;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 h2 a:hover{
