--- a/index.css
+++ b/index.css
@@ -39,15 +39,22 @@ h2 a:hover{
     color: #0af93e;
     background-color: #555;
 }
+.button-container{
+    text-align: center;
+}
 h3 {
-    font-size: smaller;
+    font-size: 1rem;
     line-height: 1.5;
     margin-top: 30px;
     margin-bottom: 20px;
-    padding: 0 20px;
+    padding: 20px;
     color: antiquewhite;
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    border-radius: 10px; 
+    max-width: 90%;
+    margin: 0 auto;
 }
 .start-page{
     display: flex;
