--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ h1 {
 }
 h2 {
     font-size: smaller;
-    margin-top: 30px;
+    margin: 0;
     margin-bottom: 15px;
     text-align: center;
     font-weight: bold;
@@ -40,7 +40,10 @@ h2 a:hover{
     background-color: #555;
 }
 .button-container{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
 }
 h3 {
     font-size: 1rem;
