--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ h2 {
     margin-bottom: 15px;
     text-align: center;
     font-weight: bold;
-
+    display: inline-block;
 }
 h2 a {
     text-decoration: none;
