--- a/index.css
+++ b/index.css
@@ -42,8 +42,12 @@ h2 a:hover{
 .button-container{
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 20px;
     margin-top: 30px;
+    flex-wrap: nowrap;
+    width: 100%;
+    text-align: center;
 }
 h3 {
     font-size: 1rem;
