--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ h2 a:hover{
     align-items: center;
     gap: 20px;
     margin-top: 30px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
     text-align: center;
 }
