--- a/index.css
+++ b/index.css
@@ -43,7 +43,12 @@ h2 a:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px 20px;
+    z-index: 1000;
 }
 .button-container{
     display: flex;
