--- a/index.css
+++ b/index.css
@@ -56,6 +56,16 @@ h2 a:hover{
     gap: 20px;
     margin-top: 0px;
 }
+.article-container{
+    width: 50%;
+    margin-left: auto;
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+    box-shadow: 0 4px 9px rgba(0, 0, 0, 0,1);
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+}
 h3 {
     font-size: 1rem;
     line-height: 1.5;
