--- a/index.css
+++ b/index.css
@@ -58,13 +58,17 @@ h2 a:hover{
 }
 .article-container{
     width: 50%;
-    margin-left: auto;
+    line-height: 1.5;
+    margin-top: 30px;
+    margin-bottom: 20px;
     padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 8px;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0,1);
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.6;
+    color: antiquewhite;
+    font-family: Arial, sans-serif;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    border-radius: 10px; 
+    max-width: 90%;
+    margin: 0 auto;
 }
 h3 {
     font-size: 1rem;
