--- a/index.css
+++ b/index.css
@@ -117,10 +117,12 @@ max-height: 200px;
 width: 250px;
 border: 1px;
 padding: 15px;
-background-color: antiquewhite;
+background-color: #333;
 border-radius: 8px;
 overflow-y: auto;
 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+color: antiquewhite;
 }
 img {
     max-width: 100%;
