--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ h2 a:hover{
     width: 100%;
     padding: 10px 20px;
     z-index: 1000;
+    padding-bottom: 50px;
 }
 .button-container{
     display: flex;
@@ -60,7 +61,7 @@ h2 a:hover{
     width: 50%;
     margin-left: auto;
     padding: 20px;
-    background-color: #333;
+    background-color:antiquewhite;
     border-radius: 8px;
     box-shadow: 0 4px 9px rgba(0, 0, 0, 0,1);
     font-family: Arial, Helvetica, sans-serif;
