--- a/index.css
+++ b/index.css
@@ -61,11 +61,15 @@ h2 a:hover{
     width: 50%;
     margin-left: auto;
     padding: 20px;
-    background-color:antiquewhite;
     border-radius: 8px;
-    box-shadow: 0 4px 9px rgba(0, 0, 0, 0,1);
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
+    background-color: #333;
+    border-radius: 8px;
+    overflow-y: auto;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    color: antiquewhite;
 }
 h3 {
     font-size: 1rem;
