--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ h2 a:hover{
 h3 {
     font-size: 1rem;
     line-height: 1.5;
-    margin-top: 30px;
+    margin-top: 80px;
     margin-bottom: 20px;
     padding: 20px;
     color: antiquewhite;
@@ -83,7 +83,8 @@ h3 {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
     border-radius: 10px; 
     max-width: 90%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 .start-page{
     display: flex;
