--- a/index.css
+++ b/index.css
@@ -172,9 +172,9 @@ img {
 .footer-container{
     background-color: #333;
     color: antiquewhite;
-    padding: 10px 0;
+    padding: 5px 0;
     text-align: center;
-    position: fixed;
+    position: static;
     width: 100%;
-    bottom: 0;
+    margin-top: 20px;
 }
