--- a/index.css
+++ b/index.css
@@ -173,7 +173,7 @@ img {
 .footer-container{
     background-color: #333;
     color: antiquewhite;
-    padding: 10px 10px;
+    padding: 5px 0;
     text-align: center;
     position: static;
     width: 100%;
