--- a/index.css
+++ b/index.css
@@ -100,6 +100,7 @@ h3 {
     height: 100vh;
     text-align: center;
     padding: 20px;
+    padding-top: 160px;
 }
 .intro-section {
     display: flex;
@@ -142,6 +143,14 @@ img {
     height: auto;
 }
 @media (max-width: 768px) {
+    .header-container{
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    .article-container{
+        width: 90%;
+    }
     .button-container {
         flex-direction: column;
         gap: 10px;
