--- a/news.css
+++ b/news.css
@@ -9,6 +9,15 @@ body{
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
 }
+h1 {
+    background: linear-gradient(to right, green, #0af93e );
+    color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 12px;
+    font-size: medium;
+    font-family: 'Arial Black', Helvetica, sans-serif;
+}
 .header-container{
     display: flex;
     justify-content: space-between;
