--- a/news.css
+++ b/news.css
@@ -59,3 +59,62 @@ h2 a:hover{
     color: #0af93e;
     background-color: #555;
 }
+@media (max-width: 768px) {
+    body {
+        padding-top: 120px;
+    }
+    .header-container{
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    .article-container{
+        width: 90%;
+        padding: 15px;
+        font-size: 0.9rem;
+    }
+    .button-container {
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+    }
+    .intro-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .intro-section img {
+        width: 90%;
+        margin-top: 15px;
+    }
+    .page-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .inform-player-list {
+        width: 90%;
+        font-size: smaller;
+    }
+    h1 {
+        font-size: 1.2rem;
+        padding: 10px;
+    }
+    h2 a {
+        font-size: 0.9rem;
+        padding: 6px 12px;
+    }
+    h3 {
+        font-size: 0.9rem;
+        padding: 15px;
+    }
+}
+.footer-container{
+    background-color: #333;
+    color: antiquewhite;
+    padding: 5px 0;
+    text-align: center;
+    position: static;
+    width: 100%;
+    margin-top: 20px;
+}
