--- a/news.css
+++ b/news.css
@@ -1,6 +1,6 @@
 .badge-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: auto;
