--- a/layout.css
+++ b/layout.css
@@ -65,8 +65,8 @@ h2 a:hover{
     }
     .header-container{
         flex-direction: column;
-        align-items: center;
-        padding-bottom: 10px;
+        align-items: flex-end;
+        padding-bottom: 40px;
     }
     .article-container{
         width: 90%;
