--- a/news.css
+++ b/news.css
@@ -31,3 +31,11 @@ width: 200px;
 height: 200px;
 object-fit: cover; 
 }
+.whole-container {
+background-size: cover;
+padding: 20px;
+text-align: center;
+border: 5px solid #ffffff;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+}
