--- a/news.css
+++ b/news.css
@@ -27,15 +27,18 @@ animation: shimmer 3s infinite linear;
     }
 }
 .badge-container img{
-width: 200px; 
-height: 200px;
-object-fit: cover; 
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    background-size: contain;
 }
 .whole-container {
-background-size: cover;
-padding: 20px;
-text-align: center;
-border: 5px solid #ffffff;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
+    background-size: cover;
+    padding: 20px;
+    text-align: center;
+    border: 5px solid #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
