--- a/news.css
+++ b/news.css
@@ -9,7 +9,7 @@
 padding: 5px;
 font-family: 'Montserrat', sans-serif;
 font-weight: 700;
-font-size: 2.8rem;
+font-size: 1.7rem;
 background: linear-gradient(90deg, #0a0a23, #512da8, #0a0a23);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
@@ -27,10 +27,9 @@ animation: shimmer 3s infinite linear;
     }
 }
 .badge-container img{
-    margin: 10px;
-    width: 50px;
-    height: 50px;
-    background-size: contain;
+width: 170px; 
+height: 170px;
+object-fit: cover; 
 }
 .whole-container {
     background-size: cover;
