--- a/news.css
+++ b/news.css
@@ -32,11 +32,17 @@ height: 170px;
 object-fit: cover; 
 }
 .whole-container {
-    background: linear-gradient(135deg, #1a1a1a, #0d0d0d);
-    border: 3px solid #ffd700;
-    padding: 20px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-    text-align: center;
-    color: #ffffff;
-    font-family: Arial, sans-serif;
+    
+background: linear-gradient(135deg, #1a1a1a, #0d0d0d);
+border: 3px solid #ffd700;
+padding: 20px;
+box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+text-align: center;
+color: #ffffff;
+font-family: Arial, sans-serif;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+
 }
