--- a/news.css
+++ b/news.css
@@ -38,5 +38,19 @@ display: flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
-
+}
+.article-container{
+    width: 50%;
+    margin-left: auto;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+    background-color: #333;
+    border-radius: 8px;
+    overflow-y: auto;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    color: antiquewhite;
 }
