--- a/news.css
+++ b/news.css
@@ -39,7 +39,7 @@ text-align: center;
 color: #ffffff;
 font-family: Arial, sans-serif;
 display: flex;
-flex-direction: row;
+flex-direction: column;
 align-items: center;
 justify-content: center;
 }
