--- a/news.css
+++ b/news.css
@@ -39,7 +39,7 @@ text-align: center;
 color: #ffffff;
 font-family: Arial, sans-serif;
 display: flex;
-flex-direction: column;
+flex-direction: row;
 align-items: center;
 justify-content: center;
 }
@@ -57,4 +57,5 @@ justify-content: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
     color: antiquewhite;
+    flex-direction: column;
 }
