--- a/news.css
+++ b/news.css
@@ -42,10 +42,11 @@ display: flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
+margin-bottom: 20px;
 }
 .article-container{
     width: 50%;
-    margin-left: auto;
+    margin-left: 20px;
     margin: 0 auto;
     padding: 60px;
     border-radius: 8px;
