--- a/news.css
+++ b/news.css
@@ -63,5 +63,7 @@ margin-bottom: 20px;
 }
 .tenor-gif-embed{
     margin-right: 20px;
-    width: 200px;
+    width: 200px;  
+    flex: 0 0 200px; 
+    margin-left: 20px;
 }
