--- a/news.css
+++ b/news.css
@@ -63,7 +63,8 @@ margin-bottom: 20px;
 }
 .tenor-gif-embed{
     margin-right: 20px;
-    width: 200px;  
+    width: 150px;  
     flex: 0 0 200px; 
     margin-left: 20px;
+    height: 100px;
 }
