--- a/news.css
+++ b/news.css
@@ -45,23 +45,25 @@ justify-content: center;
 margin-bottom: 20px;
 }
 .article-container{
-    width: 50%;
-    margin-left: 20px;
-    padding: 10px;
-    border-radius: 8px;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.6;
-    background-color: #333;
-    border-radius: 8px;
-    overflow-y: auto;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-    color: antiquewhite;
-    display: flex;
-    text-align: center;
+    
+margin-left: 20px;
+padding: 10px;
+border-radius: 8px;
+font-family: Arial, Helvetica, sans-serif;
+line-height: 1.6;
+background-color: #333;
+overflow-y: auto;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+color: antiquewhite;
+display: flex;
+justify-content: space-between;
+align-items: center;
+text-align: left;
 
 }
 .article-container img{
     margin-right: 20px;
     padding: 10px;
+    max-width: 100%;
 }
