--- a/layout.css
+++ b/layout.css
@@ -17,6 +17,8 @@ h1 {
     border-radius: 12px;
     font-size: medium;
     font-family: 'Arial Black', Helvetica, sans-serif;
+    color: inherit;
+    text-decoration: none;
 }
 .header-container{
     display: flex;
