--- a/news.css
+++ b/news.css
@@ -2,6 +2,17 @@
     margin-top: 5px;
     padding: 5px 15px;
 }
+h1 {
+    background: linear-gradient(to right, green, #0af93e );
+    color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 12px;
+    font-size: medium;
+    font-family: 'Arial Black', Helvetica, sans-serif;
+    color: inherit;
+    text-decoration: none;
+}
 .badge-container{
     display: flex;
     flex-direction: row;
