--- a/layout.css
+++ b/layout.css
@@ -19,6 +19,10 @@ h1 {
     font-family: 'Arial Black', Helvetica, sans-serif;
     text-decoration: none;
 }
+h1 a{
+    color: inherit;
+    text-decoration: none;
+}
 .header-container{
     display: flex;
     justify-content: space-between;
