--- a/layout.css
+++ b/layout.css
@@ -41,6 +41,23 @@ h1 a{
     gap: 20px;
     margin-top: 0px;
 }
+.button-container.active{
+background-color: green;
+animation: pulse 1s infinite
+}
+
+@keyframes pulse {
+       0% {
+       box-shadow: 0 0 0 0 rgba(0, 255, 0, 0.7);
+    }
+    70% {
+       box-shadow: 0 0 10px 10px rgba(0, 255, 0, 0);
+    }
+    100% {
+       box-shadow: 0 0 0 0 rgba(0, 255, 0, 0);
+    }
+}    
+
 h2 {
     font-size: smaller;
     margin: 0;
