--- a/news.css
+++ b/news.css
@@ -2,6 +2,22 @@
     margin-top: 5px;
     padding: 5px 15px;
 }
+.header-container.active{
+    background-color: green;
+    animation: pulse 1s infinite
+    }
+    
+    @keyframes pulse {
+           0% {
+           box-shadow: 0 0 0 0 rgba(0, 255, 0, 0.7);
+        }
+        70% {
+           box-shadow: 0 0 10px 10px rgba(0, 255, 0, 0);
+        }
+        100% {
+           box-shadow: 0 0 0 0 rgba(0, 255, 0, 0);
+        }
+    }    
 .badge-container{
     display: flex;
     flex-direction: row;
