--- a/match-reports.css
+++ b/match-reports.css
@@ -15,3 +15,8 @@ h2 {
     padding: 20px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
 }
+.league-container img{
+    width: 170px; 
+    height: 170px;
+    object-fit: cover; 
+    }
