--- a/match-reports.css
+++ b/match-reports.css
@@ -14,8 +14,20 @@ h2 {
     border: 3px solid #ffd700;
     padding: 20px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .league-container img{
     width: 170px; 
     height: 170px; 
+    padding: 10px;
+    background-color: #111;
+    border: 2px solid gold;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.2s;
+    }
+    .league-container img:hover{
+        transform: scale(1.05);
     }
