--- a/match-reports.css
+++ b/match-reports.css
@@ -18,6 +18,46 @@ h2 {
     justify-content: center;
     flex-wrap: wrap;
 }
+.league-box {
+    position: relative;
+    width: 170px;
+    height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #111;
+    border: 2px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+    transition: transform 0.2s;
+}
+.league-box:hover{
+    transform: scale(1.0);
+}
+.league-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: opacity 0.3s;
+}
+.league-info {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.85);
+    width: 100%;
+    text-align: center;
+    padding: 8px 0;
+    font-weight: bold;
+    color: gold;
+    font-size: 16px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .league-box:hover .league-info {
+    opacity: 1;
+  }
 .league-container img{
     width: 170px; 
     height: 170px; 
@@ -27,7 +67,7 @@ h2 {
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: transform 0.2s;
-    }
-    .league-container img:hover{
+}
+.league-container img:hover{
         transform: scale(1.05);
-    }
+}
