--- a/match-reports.css
+++ b/match-reports.css
@@ -25,7 +25,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #111;
+    background-color: gold;
     border: 2px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -42,22 +42,22 @@ h2 {
     transition: opacity 0.3s;
 }
 .league-info {
-    position: absolute;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.85);
-    width: 100%;
-    text-align: center;
-    padding: 8px 0;
-    font-weight: bold;
-    color: gold;
-    font-size: 16px;
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-  
-  .league-box:hover .league-info {
-    opacity: 1;
-  }
+ position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.85);
+  width: 100%;
+  text-align: center;
+  padding: 8px 0;
+  font-weight: bold;
+  color: gold;
+  font-size: 16px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.league-box:hover .league-info {
+  opacity: 1;
+}
 .league-container img{
     width: 170px; 
     height: 170px; 
