--- a/match-reports.css
+++ b/match-reports.css
@@ -25,7 +25,8 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: gold;
+    background-color: #2b2b2b;
+    background: linear-gradient(135deg, #3a3a3a, #1f1f1f);
     border: 2px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -40,6 +41,7 @@ h2 {
     height: 100%;
     object-fit: contain;
     transition: opacity 0.3s;
+    filter: brightness(1.3);
 }
 .league-info {
  position: absolute;
