--- a/match-reports.css
+++ b/match-reports.css
@@ -25,8 +25,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2b2b2b;
-    background: linear-gradient(135deg, #3a3a3a, #1f1f1f);
+    background-color: #3b3a3a;
     border: 2px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -41,7 +40,7 @@ h2 {
     height: 100%;
     object-fit: contain;
     transition: opacity 0.3s;
-    filter: brightness(1.3);
+    filter: brightness(1.8);
 }
 .league-info {
  position: absolute;
@@ -51,7 +50,7 @@ h2 {
   text-align: center;
   padding: 8px 0;
   font-weight: bold;
-  color: gold;
+  color: antiquewhite;
   font-size: 16px;
   opacity: 0;
   transition: opacity 0.3s;
