--- a/match-reports.css
+++ b/match-reports.css
@@ -25,7 +25,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #3b3a3a;
+    background-color: #6b6666;
     border: 2px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
@@ -40,7 +40,7 @@ h2 {
     height: 100%;
     object-fit: contain;
     transition: opacity 0.3s;
-    filter: brightness(1.8);
+    filter: brightness(1.3);
 }
 .league-info {
  position: absolute;
