--- a/match-reports.css
+++ b/match-reports.css
@@ -25,10 +25,10 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #6b6666;
+    background-color: #7d7878;
     border: 2px;
     border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 8px rgba(65, 64, 64, 0.4);
     overflow: hidden;
     transition: transform 0.2s;
 }
@@ -40,7 +40,7 @@ h2 {
     height: 100%;
     object-fit: contain;
     transition: opacity 0.3s;
-    filter: brightness(1.3);
+    filter: brightness(1.5);
 }
 .league-info {
  position: absolute;
