--- a/match-reports.css
+++ b/match-reports.css
@@ -28,7 +28,7 @@ h2 {
     background-color: #d7cece;
     border: 2px;
     border-radius: 12px;
-    box-shadow: 8px 8px 8px rgba(174, 171, 171, 0.4);
+    box-shadow: 8px 8px 8px 8px rgba(174, 171, 171, 0.4);
     overflow: hidden;
     transition: transform 0.2s;
 }
