--- a/match-reports.css
+++ b/match-reports.css
@@ -31,7 +31,7 @@ h2 {
     box-shadow: 2px 4px 8px rgba(174, 171, 171, 0.4);
     overflow: hidden;
     transition: transform 0.2s;
-    font-size: smaller;
+    font-size: x-small;
 }
 .league-box:hover{
     transform: scale(1.0);
