--- a/match-reports.css
+++ b/match-reports.css
@@ -5,6 +5,10 @@ h2 {
     display: grid;
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+}
+h3 {
+
 }
 .league-container {
     display: flex;
