--- a/match-reports.css
+++ b/match-reports.css
@@ -5,7 +5,7 @@ h2 {
     display: grid;
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 10px;
+    padding-top: 10px;
 }
 h3 {
 
