--- a/match-reports.css
+++ b/match-reports.css
@@ -20,7 +20,7 @@ h3 {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     gap: 20px;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 .league-box {
     position: relative;
