--- a/match-reports.css
+++ b/match-reports.css
@@ -1,6 +1,6 @@
 h2 {
     justify-content: center;
-    color: rgb(12, 11, 11);
+    color: gold;
     text-shadow: gold;
     display: grid;
     font-size: 2em;
