--- a/match-reports.css
+++ b/match-reports.css
@@ -6,6 +6,9 @@ h2 {
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 10px;
+    background: #111;
+    border: 10px;
+    border-radius: 0 5px;
 }
 h3 {
 
