--- a/match-reports.css
+++ b/match-reports.css
@@ -1,14 +1,11 @@
 h2 {
     justify-content: center;
-    color: gold;
-    text-shadow: gold;
+    color: rgb(0, 0, 0);
+    text-shadow: rgb(0, 0, 0);
     display: grid;
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 10px;
-    background: #111;
-    border: 10px;
-    border-radius: 0 5px;
 }
 h3 {
 
