--- a/match-reports.css
+++ b/match-reports.css
@@ -9,6 +9,13 @@ h2 {
 }
 h3 {
 
+    font-size: 35px;
+    font-weight: bold;
+    background: linear-gradient(45deg, gold, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    
 }
 .league-container {
     display: flex;
