--- a/layout.css
+++ b/layout.css
@@ -67,12 +67,14 @@ h2 a:hover{
 }
 @media (max-width: 768px) {
     body {
-        padding-top: 120px;
+        padding: 60px 5px 10px;
     }
     .header-container{
         flex-direction: column;
-        align-items: flex-end;
+        align-items: flex-start;
         padding-bottom: 40px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     .article-container{
         width: 90%;
@@ -103,16 +105,13 @@ h2 a:hover{
         font-size: smaller;
     }
     h1 {
-        font-size: 1.2rem;
-        padding: 10px;
+        font-size: 1.4rem;
     }
     h2 a {
-        font-size: 0.9rem;
-        padding: 6px 12px;
+        font-size: 1rem;
     }
     h3 {
-        font-size: 0.9rem;
-        padding: 15px;
+        font-size: 1rem;
     }
 }
 .footer-container{
