--- a/opinion-analysis.css
+++ b/opinion-analysis.css
@@ -1,3 +1,7 @@
 .content-container {
-
+     display: flex;
+     width: 100%;
+     height: 100%;
+     justify-content: space-between;
+     padding: 20px;
 }
