--- a/opinion-analysis.css
+++ b/opinion-analysis.css
@@ -1,7 +1,10 @@
 .content-container {
-     display: flex;
-     width: 100%;
-     height: 100%;
-     justify-content: space-between;
-     padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 20px;
+    gap: 20px;
+    width: 560px;
+    height: 315px; 
 }
