--- a/layout.css
+++ b/layout.css
@@ -1,3 +1,5 @@
+/*This CSS file is the ready made layout page for every single HTML page*/
+/*I made this,so that the other CSS files are much shorter*/
 body{
     height: 100%;
     margin: 0;
@@ -65,6 +67,7 @@ h2 a:hover{
     color: #0af93e;
     background-color: #555;
 }
+/*This helps to structure the page on mobile*/
 @media (max-width: 768px) {
     body {
         padding: 60px 5px 10px;
