--- a/opinion-analysis.css
+++ b/opinion-analysis.css
@@ -1,3 +1,4 @@
+/*Styles all of the boxes to look good*/
 .content-container {
     display: flex;
     justify-content: center;
@@ -7,6 +8,7 @@
     gap: 20px;
     flex-wrap: wrap;
 }
+/*Made the boxes the same size*/
 iframe {
     width: 470px;
     height: 260px; 
