--- a/index.css
+++ b/index.css
@@ -19,19 +19,19 @@
     color: antiquewhite;
 }
 h3 {
-    font-size: 1rem;
-    line-height: 1.5;
-    margin-top: 80px;
-    margin-bottom: 20px;
-    padding: 20px;
-    color: antiquewhite;
-    font-family: Arial, sans-serif;
-    background-color: rgba(0, 0, 0, 0.5);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-    border-radius: 10px; 
-    max-width: 90%;
+    width: 50%;
     margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+    background-color: #333;
+    border-radius: 8px;
+    overflow-y: auto;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    color: antiquewhite;
 }
 .start-page{
     display: flex;
