--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ h3 {
     margin: 0;
     padding: 0;
 }
-.intro-section img {
+.intro-image {
     width: 250px;
     height: auto;
     border-radius: 10px;
